Fix scroll position on mobile

--- a/sass/source/5_objects/_page.scss
+++ b/sass/source/5_objects/_page.scss
@@ -1,3 +1,10 @@
+[id] {
+  scroll-margin-top: $base-line-height * 3;
+  @media screen and (hover: hover) and (min-width: $breakpoint-large) {
+    scroll-margin-top: 0;
+  }
+}
+
 //Body Colours
 body {
   background-color: var(--background-colour);
@@ -82,10 +89,12 @@ body {
 
 .site-content {
   grid-area: main;
+  margin: $base-line-height 0;
 }
 
 .site-sidebar {
   grid-area: sidebar;
+  margin: $base-line-height 0;
 }
 
 .site-footer {
